# cpp-inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_requirements.sh  requirements.txt
cmake/: kernel.cmake
models/: cnn.onnx  cnn.pte  whistlenet.pte  whistlenet_quantized.pte
src/: et_runner.cpp  et_runner.h  et_test.cpp  onnx_test.cpp  test.cpp
src/audiocpp/: AudioRecorder.h  CMakeLists.txt
